--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.6">
-    <title>Rick Griffith Portfolio</title>
+    <title>Rick's Blog</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/album/">
 
@@ -16,8 +16,6 @@
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="/docs/4.4/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-    <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
     <link rel="manifest" href="/docs/4.4/assets/img/favicons/manifest.json">
     <link rel="mask-icon" href="/docs/4.4/assets/img/favicons/safari-pinned-tab.svg" color="#563d7c">
     <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon.ico">
@@ -55,44 +53,30 @@
                 <div class="navbar-nav ml-auto">
                     <a class="nav-item nav-link" href="http://twitter.com/wanderingreguy">Twitter</a>
                     <a class="nav-item nav-link" href="{% static 'resume.pdf' %}">Resume</a>
-                    <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
+                    <a class="nav-item nav-link active" href="{% url 'allblogs' %}">Blog</a>
                 </div>
             </div>
         </nav>
     </header>
 
     <main role="main">
+        <div class="container">
 
-        <section class="jumbotron text-center">
-            <div class="container">
-                <h1>Hi, I'm Rick</h1>
-                <p class="lead text-muted">Hey, my name is Rick Griffith. Below you will find examples of projects that I built and be able to explore my current portfolio.</p>
-                <p>
-                    <a href="mailto:RickAGriffith@hotmail.com" class="btn btn-primary my-2">E-mail Me</a>
-                </p>
-                <img src="{% static 'headshot.jpg' %}" height=300 />
-            </div>
-        </section>
+        <h1 class="text-center pt-3">Welcome to Rick's Blog</h1>
+        <br />
+        <br />
+        <h2>Latest Posts</h2>
+        <hr />
 
-        <div class="album py-5 bg-light">
-            <div class="container">
-
-                <div class="row">
-
-                    {% for job in jobs.all %}
-                    <div class="col-md-4">
-                        <div class="card mb-4 shadow-sm">
-                            <img class="card-img-top", ".img-fluid" src="{{ job.image.url }}" height=200 width = 200 />
-                            <div class="card-body">
-                                <p class="card-text">{{ job.summary }}</p>
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
-                </div>
-            </div>
+        {% for blog in blogs.all %}
+        <a href="{% url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
+        {{ blog.pub_date_short }}
+        <br />
+        <img class='.img-fluid' src ="{{ blog.image.url }}" height=250 width=350 />
+        <br />
+        <p>{{ blog.summary }}...</p>
+        {% endfor %}
         </div>
-
     </main>
 
     <footer class="text-muted">
